--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -4,42 +4,33 @@
 
 \documentclass{resume}
 \usepackage{zh_CN-Adobefonts_external} % Simplified Chinese Support using external fonts (./fonts/zh_CN-Adobe/)
-% \usepackage{NotoSansSC_external}
-% \usepackage{NotoSerifCJKsc_external}
-% \usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
+%\usepackage{zh_CN-Adobefonts_internal} % Simplified Chinese Support using system fonts
 \usepackage{linespacing_fix} % disable extra space before next section
 \usepackage{cite}
 
 \begin{document}
 \pagenumbering{gobble} % suppress displaying page number
 
-\name{你的大名}
+\name{刘良建}
 
 \basicInfo{
-  \email{yuanbin2014@gmail.com} \textperiodcentered\ 
-  \phone{(+86) 131-221-87xxx} \textperiodcentered\ 
-  \linkedin[billryan8]{https://www.linkedin.com/in/billryan8}}
+  \email{janestar92@foxmail.com} \textperiodcentered\ 
+  \phone{(+86) 186-5812-9863} 
+  }
  
-\section{\faGraduationCap\  教育背景}
-\datedsubsection{\textbf{上海交通大学}, 上海}{2013 -- 至今}
-\textit{在读硕士研究生}\ 信息与通信工程, 预计 2016 年 3 月毕业
-\datedsubsection{\textbf{西安电子科技大学}, 西安, 陕西}{2009 -- 2013}
-\textit{学士}\ 通信工程
+\section{\faGraduationCap\ 教育背景}
+\datedsubsection{\textbf{浙江大学}, 软件工程, 硕士}{2014.09 -- 2017.03}
+\datedsubsection{\textbf{湖南大学}, 软件工程, 学士}{2010.09 -- 2014.07}
 
-\section{\faUsers\ 实习/项目经历}
-\datedsubsection{\textbf{黑科技公司} 上海}{2015年3月 -- 2015年5月}
-\role{实习}{经理: 高富帅}
-xxx后端开发
-\begin{itemize}
-  \item 实现了 xxx 特性
-  \item 后台资源占用率减少8\%
-  \item xxx
-\end{itemize}
-
-\datedsubsection{\textbf{分布式科学上网姿势}}{2014年6月 -- 至今}
-\role{Golang, Linux}{个人项目，和富帅糕合作开发}
+\section{\faUsers\ 工作经历}
+\datedsubsection{\textbf{腾讯}}{2017年4月 -- 至今}
+{7年互联网产品后台开发经验，先后参与QQ动漫、波洞星球二次元APP、QQ直播等业务的研发工作，熟悉海量服务高可用架构设计。}
+\section{\faThList\ 项目经历}
+\datedsubsection{\textbf{QQ直播}}{2021年6月 -- 至今}
+{QQ直播是手Q上的直播子业务，大房间活动、消息推送、缓存设计、高可用}
 \begin{onehalfspacing}
-分布式负载均衡科学上网姿势, https://github.com/cyfdecyf/cow
+{QQ直播是手Q上的直播子业务，大房间活动、消息推送、缓存设计、高可用}
+大规模消息推送系统
 \begin{itemize}
   \item 修复了连接未正常关闭导致文件描述符耗尽的 bug
   \item 使用Chord 哈希 URL, 实现稳定可靠地分流
@@ -47,10 +38,30 @@ xxx后端开发
 \end{itemize}
 \end{onehalfspacing}
 
-\datedsubsection{\textbf{\LaTeX\ 简历模板}}{2015 年5月 -- 至今}
-\role{\LaTeX, Python}{个人项目}
 \begin{onehalfspacing}
-优雅的 \LaTeX\ 简历模板, https://github.com/billryan/resume
+直播间大房活动
+\begin{itemize}
+  \item 修复了连接未正常关闭导致文件描述符耗尽的 bug
+  \item 使用Chord 哈希 URL, 实现稳定可靠地分流
+  \item xxx (尽量使用量化的客观结果)
+\end{itemize}
+\end{onehalfspacing}
+
+\datedsubsection{\textbf{波洞星球}}{2018年6月 -- 2021年5月}
+{经历了APP从0到1的开发过程}
+\begin{onehalfspacing}
+社区体系搭建
+\begin{itemize}
+  \item 容易定制和扩展
+  \item 完善的 Unicode 字体支持，使用 \XeLaTeX\ 编译
+  \item 支持 FontAwesome 4.5.0
+\end{itemize}
+\end{onehalfspacing}
+
+\datedsubsection{\textbf{QQ动漫}}{2017年4月 -- 2018年5月}
+{QQ动漫是漫画业务生产分发}
+\begin{onehalfspacing}
+漫画内容
 \begin{itemize}
   \item 容易定制和扩展
   \item 完善的 Unicode 字体支持，使用 \XeLaTeX\ 编译
@@ -65,24 +76,12 @@ xxx后端开发
 %  \item main contribution
 %\end{itemize}
 
-\section{\faCogs\ IT 技能}
+\section{\faCogs\ 专业技能}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item 编程语言: C == Python > C++ > Java
-  \item 平台: Linux
-  \item 开发: xxx
-\end{itemize}
-
-\section{\faHeartO\ 获奖情况}
-\datedline{\textit{第一名}, xxx 比赛}{2013 年6 月}
-\datedline{其他奖项}{2015}
-
-\section{\faInfo\ 其他}
-% increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.5ex]
-  \item 技术博客: http://blog.yours.me
-  \item GitHub: https://github.com/username
-  \item 语言: 英语 - 熟练(TOEFL xxx)
+  \item 熟悉C/C++、Go语言编程
+  \item 熟悉常用数据结构与算法，熟悉Linux网络编程
+  \item 擅长总结
 \end{itemize}
 
 %% Reference
