--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -22,15 +22,23 @@
 \datedsubsection{\textbf{浙江大学}, 软件工程, 硕士}{2014.09 -- 2017.03}
 \datedsubsection{\textbf{湖南大学}, 软件工程, 学士}{2010.09 -- 2014.07}
 
+\section{\faCogs\ 专业技能}
+% increase linespacing [parsep=0.5ex]
+\begin{itemize}[parsep=0.5ex]
+  \item 熟悉C/C++、Go语言,了解常用数据结构与算法，了解Linux网络编程
+  \item 熟悉分布式系统架构设计，对系统多并发、高可用设计有一定经验
+  \item 有良好的沟通和快速学习能力，有新人培养经验
+\end{itemize}
+
 \section{\faUsers\ 工作经历}
 \datedsubsection{\textbf{腾讯}}{2017年4月 -- 至今}
 {7年互联网产品后台开发经验，先后参与QQ动漫、波洞星球二次元APP、QQ直播等业务的研发工作，熟悉海量服务高可用架构设计。}
+
 \section{\faThList\ 项目经历}
 \datedsubsection{\textbf{QQ直播}}{2021年6月 -- 至今}
-{QQ直播是手Q上的直播子业务，大房间活动、消息推送、缓存设计、高可用}
+{QQ直播是手Q上的直播子业务，大房间活动、消息推送、缓存设计、高可用fasdfsdafsdafsdafdsafsdaffffffffffffffffffffsad} \\
 \begin{onehalfspacing}
-{QQ直播是手Q上的直播子业务，大房间活动、消息推送、缓存设计、高可用}
-大规模消息推送系统
+\textbf{大规模消息推送系统}
 \begin{itemize}
   \item 修复了连接未正常关闭导致文件描述符耗尽的 bug
   \item 使用Chord 哈希 URL, 实现稳定可靠地分流
@@ -39,7 +47,7 @@
 \end{onehalfspacing}
 
 \begin{onehalfspacing}
-直播间大房活动
+\textbf{大规模消息推送系统}
 \begin{itemize}
   \item 修复了连接未正常关闭导致文件描述符耗尽的 bug
   \item 使用Chord 哈希 URL, 实现稳定可靠地分流
@@ -48,9 +56,9 @@
 \end{onehalfspacing}
 
 \datedsubsection{\textbf{波洞星球}}{2018年6月 -- 2021年5月}
-{经历了APP从0到1的开发过程}
+{经历了APP从0到1的开发过程} \\
 \begin{onehalfspacing}
-社区体系搭建
+\textbf{社区体系搭建}
 \begin{itemize}
   \item 容易定制和扩展
   \item 完善的 Unicode 字体支持，使用 \XeLaTeX\ 编译
@@ -59,9 +67,9 @@
 \end{onehalfspacing}
 
 \datedsubsection{\textbf{QQ动漫}}{2017年4月 -- 2018年5月}
-{QQ动漫是漫画业务生产分发}
+{QQ动漫是漫画业务生产分发}\\
 \begin{onehalfspacing}
-漫画内容
+\textbf{漫画内容}
 \begin{itemize}
   \item 容易定制和扩展
   \item 完善的 Unicode 字体支持，使用 \XeLaTeX\ 编译
@@ -76,13 +84,7 @@
 %  \item main contribution
 %\end{itemize}
 
-\section{\faCogs\ 专业技能}
-% increase linespacing [parsep=0.5ex]
-\begin{itemize}[parsep=0.5ex]
-  \item 熟悉C/C++、Go语言编程
-  \item 熟悉常用数据结构与算法，熟悉Linux网络编程
-  \item 擅长总结
-\end{itemize}
+
 
 %% Reference
 %\newpage
