--- a/resume-zh_CN.tex
+++ b/resume-zh_CN.tex
@@ -25,9 +25,9 @@
 \section{\faCogs\ 专业技能}
 % increase linespacing [parsep=0.5ex]
 \begin{itemize}[parsep=0.5ex]
-  \item 熟悉C/C++、Go语言,了解常用数据结构与算法，了解Linux网络编程
-  \item 熟悉分布式系统架构设计，对系统多并发、高可用设计有一定经验
-  \item 有良好的沟通和快速学习能力，有新人培养经验
+  \item 熟悉C/C++、Go语言,熟悉常用数据结构与算法，熟悉Linux网络编程
+  \item 熟悉分布式系统架构设计，对复杂系统高并发处理、可用性保障有一定经验
+  \item 有良好的沟通和快速学习能力，具备快速分析定位问题能力
 \end{itemize}
 
 \section{\faUsers\ 工作经历}
